<resources>
    <string name="app_name">W mail</string>

    <string name="hint_nickname">닉네임</string>
    <string name="hint_email">이메일</string>
    <string name="warn_nickname">닉네임은 영문과 숫자를 결합한 4~12자로 입력해주세요.</string>
    <string name="warn_email">이메일이 형식에 맞지 않습니다.</string>
    <string name="next">Next</string>
    
    <string name="mail">Mail</string>
    <string name="setting">Setting</string>

    <string name="primary">Primary</string>
    <string name="social">Social</string>
    <string name="promotion">Promotion</string>
</resources>