<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/colorOnPrimary">
<androidx.appcompat.widget.LinearLayoutCompat
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".HomeActivity">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="15dp"
        android:gravity="center_vertical">
        <ImageView
            android:id="@+id/menu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="20dp"
            android:src="@drawable/ic_menu"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textSize="22dp"
            android:textColor="?attr/colorOnSecondary"/>
    </androidx.appcompat.widget.LinearLayoutCompat>

    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/viewPager"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"/>

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/tabView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:tabMode="fixed"
        app:tabGravity="fill">

        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mail"
            android:icon="@drawable/ic_mail"/>

        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/setting"
            android:icon="@drawable/ic_settings"/>

    </com.google.android.material.tabs.TabLayout>

</androidx.appcompat.widget.LinearLayoutCompat>

<androidx.constraintlayout.widget.ConstraintLayout
    android:id="@+id/left_drawer"
    android:layout_width="300dp"
    android:layout_height="match_parent"
    android:background="?attr/colorOnPrimary"
    android:layout_gravity="start">

    <TextView
        android:id="@+id/app_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textSize="40dp"
        android:textColor="?attr/colorOnSecondary"
        android:padding="20dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/primary_btn"/>
    <com.google.android.material.button.MaterialButton
        android:id="@+id/primary_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/primary"
        app:icon="@drawable/ic_primary"
        android:layout_marginHorizontal="20dp"
        android:padding="5dp"
        android:backgroundTint="?attr/colorOnPrimary"
        android:textColor="?attr/colorOnSecondary"
        app:iconTint="?attr/colorOnSecondary"
        app:layout_constraintTop_toBottomOf="@+id/app_name"
        app:layout_constraintBottom_toTopOf="@+id/social_btn"/>
    <com.google.android.material.button.MaterialButton
        android:id="@+id/social_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/social"
        app:icon="@drawable/ic_social"
        android:layout_marginHorizontal="20dp"
        android:padding="5dp"
        android:backgroundTint="?attr/colorOnPrimary"
        android:textColor="?attr/colorOnSecondary"
        app:iconTint="?attr/colorOnSecondary"
        app:layout_constraintTop_toBottomOf="@+id/primary_btn"
        app:layout_constraintBottom_toTopOf="@+id/promotion_btn"/>
    <com.google.android.material.button.MaterialButton
        android:id="@+id/promotion_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/promotion"
        app:icon="@drawable/ic_promotion"
        android:layout_marginHorizontal="20dp"
        android:padding="5dp"
        android:backgroundTint="?attr/colorOnPrimary"
        android:textColor="?attr/colorOnSecondary"
        app:iconTint="?attr/colorOnSecondary"
        app:layout_constraintTop_toBottomOf="@+id/social_btn"/>

</androidx.constraintlayout.widget.ConstraintLayout>

</androidx.drawerlayout.widget.DrawerLayout>